fix: stretch styling, mobile bug

--- a/styles/App.scss
+++ b/styles/App.scss
@@ -911,7 +911,6 @@ button:disabled {
   justify-content: space-around;
   margin: auto;
   a {
-    align-items: stretch;
     margin: 0.5rem;
     display: block;
     width: 100%;
